--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                     <input type="text">
                     <button>click</button>
                 </div>
+                <div class="header__burger">
+                    <div class="burger__item burger-1"></div>
+                    <div class="burger__item burger-2"></div>
+                    <div class="burger__item burger-3"></div>
+                </div>
             </div>
         </div>
     </div>
